--- a/checkbox.css
+++ b/checkbox.css
@@ -1,23 +1,23 @@
-@font-face {
-    font-family: 'Vazir-FD';
-    src: url('../fonts/Vazir-FD.woff');
-}
-
 * {
-    margin: 0;
-    padding: 0;
-    direction: rtl;
     box-sizing: border-box;
     user-select: none;
+    direction: rtl;
 }
 
-a {
-    text-decoration: none;
+html,
+body {
+    margin: 0;
+    height: 100%;
+    background-color: #f5eec2;
 }
 
 body {
-    font-family: 'Vazir-FD';
-    background-color: #f5eec2;
+    display: flex;
+    background: #f5eec2;
+    justify-content: center;
+    /* align-items: center; */
+    font: 24px/1.4 "RobotoDraft", sans-serif;
+    color: #fff;
 }
 
 section {
@@ -26,73 +26,13 @@ section {
     padding: 0.5em;
 }
 
-.header {
-    background-color: #39395f;
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
+h1 {
+    font-weight: 400;
+    font-size: 2em;
+    cursor: default;
+    margin: 0 0 .5em 0;
 }
 
-.main {
-    margin: 10px auto;
-    border: 2px solid #416a59;
-    height: 100px;
-    width: 50%;
-    background-color: #a9c25d;
-    border-radius: 1rem;
-    padding: 10px;
-}
-
-.search {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-}
-
-#search-products {
-    border: 1px solid #73a24e;
-    border-left: 0;
-    border-radius: 0 1rem 1rem 0;
-    width: 100%;
-    padding: 1rem;
-    outline: 0;
-    font-family: 'Vazir-FD';
-}
-
-.search-box {
-    display: flex;
-    justify-content: center;
-}
-
-.search-icon {
-    background-color: #fff;
-    border-radius: 1rem 0 0 1rem;
-    border: 1px solid #73a24e;
-    border-right: 0;
-    width: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #416a59;
-    padding: 0.5rem;
-}
-
-.available-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-@media only screen and (max-width: 768px) {
-    .search {
-        display: flex;
-        flex-direction: column;
-    }
-}
 input[type='checkbox'] {
     height: 0;
     width: 0;
@@ -103,7 +43,7 @@ input[type='checkbox']+label {
     display: flex;
     margin: .6em 0em;
     align-items: center;
-    color: #fff;
+    color: #9e9e9e;
     transition: color 250ms cubic-bezier(.4, .0, .23, 1);
 }
 
@@ -124,7 +64,7 @@ input[type='checkbox']+label>ins>i {
     bottom: 0;
     right: 2em;
     font-style: normal;
-    color: #39395f;
+    color: #4fc3f7;
 }
 
 input[type='checkbox']+label>#span-check {
@@ -135,7 +75,7 @@ input[type='checkbox']+label>#span-check {
     width: 1em;
     height: 1em;
     background: transparent;
-    border: 2px solid #39395f;
+    border: 2px solid #9e9e9e;
     border-radius: 2px;
     cursor: pointer;
     transition: color 250ms cubic-bezier(.4, .0, .23, 1);
@@ -157,7 +97,7 @@ input[type='checkbox']:checked+label>ins {
 }
 
 input[type='checkbox']:checked+label>#span-check {
-    border: .5em solid #f5eec2;
+    border: .5em solid #FFEB3B;
     animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
 }
 
