--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ body {
     align-items: center;
     color: #fff;
 }
+
 /* MAIN */
 
 .main {
@@ -45,6 +46,7 @@ body {
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
+
 .input {
     border: 1px solid #73a24e;
     border-radius: 1rem;
@@ -52,11 +54,13 @@ body {
     outline: 0;
     font-family: 'Vazir-FD';
 }
-.search-products{
+
+.search-products {
     border-radius: 0 1rem 1rem 0;
     border-left: 0;
     width: 100%;
 }
+
 .search-box {
     display: flex;
     justify-content: center;
@@ -81,11 +85,12 @@ body {
     align-items: center;
     height: 3rem;
 }
+
 .span-text {
     color: #183a1d;
 }
 
-.add-product>form{
+.add-product>form {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
     grid-gap: 1rem;
@@ -100,12 +105,65 @@ body {
     border-radius: 1rem;
     cursor: pointer;
 }
+
+/* SELECT */
+select {
+    /* Reset Select */
+    appearance: none;
+    outline: 0;
+    border: 0;
+    box-shadow: none;
+    /* Personalize */
+    flex: 1;
+    padding: 0 1em;
+    color: #000;
+    background-color: #c8d8e4;
+    background-image: none;
+    cursor: pointer;
+    font-family: 'Vazir-FD';
+}
+
+/* Remove IE arrow */
+select::-ms-expand {
+    display: none;
+}
+
+/* Custom Select wrapper */
+.select {
+    position: relative;
+    display: flex;
+    width: 20em;
+    height: 3em;
+    border-radius: .25em;
+    overflow: hidden;
+    margin: auto;
+}
+
+/* Arrow */
+.select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 1em;
+    background-color: #2b6777;
+    color: #fff;
+    transition: .25s all ease;
+    pointer-events: none;
+}
+
+/* Transition */
+.select:hover::after {
+    color: #6db784;
+}
+
 /* CHECKBOX */
 
 section {
     display: flex;
     flex-direction: column;
 }
+
 input[type='checkbox'] {
     height: 0;
     width: 0;
@@ -160,9 +218,11 @@ input[type='checkbox']+label:hover {
 input[type='checkbox']+label:hover>#span-check {
     background: rgba(255, 255, 255, .1);
 }
+
 input[type='checkbox']:checked+label>#span-text {
     visibility: hidden;
 }
+
 input[type='checkbox']:checked+label>ins {
     height: 100%;
     padding: 0.25rem;
@@ -229,13 +289,16 @@ input[type='checkbox']:checked+label>#span-check:before {
     margin: 1rem auto;
     background-color: #52ab98;
 }
+
 #products p {
     color: #52ab98;
 }
+
 .empty-message {
     color: #fff;
     text-align: center;
 }
+
 .product-row {
     width: 90%;
     border: 1px solid #f2f2f2;
@@ -243,11 +306,12 @@ input[type='checkbox']:checked+label>#span-check:before {
     margin: 2em auto;
     border-radius: 10px;
     border-radius: 5px;
-    box-shadow: 0 0 25px 5px rgba(0,0,0, 20%);
+    box-shadow: 0 0 25px 5px rgba(0, 0, 0, 20%);
     min-width: 0;
     background-color: #f2f2f2;
     background-clip: border-box;
 }
+
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 950px) {
@@ -255,10 +319,12 @@ input[type='checkbox']:checked+label>#span-check:before {
         display: flex;
         flex-direction: column;
     }
-    .add-product>form{
+
+    .add-product>form {
         display: flex;
         flex-direction: column;
-    } 
+    }
+
     .add-btn {
         width: 50%;
         height: 2rem;
