--- a/styles/style.css
+++ b/styles/style.css
@@ -96,14 +96,17 @@ body {
     grid-gap: 1rem;
 }
 
-.add-btn {
-    background-color: #6db784;
+.btn {
     font-family: 'Vazir-FD';
     outline: none;
     border: none;
     color: #fff;
     border-radius: 1rem;
     cursor: pointer;
+}
+
+.add-btn {
+    background-color: #6db784;
 }
 
 /* SELECT */
@@ -132,7 +135,7 @@ select::-ms-expand {
 .select {
     position: relative;
     display: flex;
-    width: 20em;
+    width: 50%;
     height: 3em;
     border-radius: .25em;
     overflow: hidden;
@@ -159,9 +162,14 @@ select::-ms-expand {
 
 /* CHECKBOX */
 
-section {
+.section-exist {
     display: flex;
-    flex-direction: column;
+}
+
+.section-product-exist {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 input[type='checkbox'] {
@@ -197,7 +205,7 @@ input[type='checkbox']+label>ins>i {
     color: #39395f;
 }
 
-input[type='checkbox']+label>#span-check {
+input[type='checkbox']+label>.span-check {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -215,11 +223,11 @@ input[type='checkbox']+label:hover {
     cursor: pointer;
 }
 
-input[type='checkbox']+label:hover>#span-check {
+input[type='checkbox']+label:hover>.span-check {
     background: rgba(255, 255, 255, .1);
 }
 
-input[type='checkbox']:checked+label>#span-text {
+input[type='checkbox']:checked+label>.span-text {
     visibility: hidden;
 }
 
@@ -228,12 +236,12 @@ input[type='checkbox']:checked+label>ins {
     padding: 0.25rem;
 }
 
-input[type='checkbox']:checked+label>#span-check {
+input[type='checkbox']:checked+label>.span-check {
     border: .5em solid #52ab98;
     animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
 }
 
-input[type='checkbox']:checked+label>#span-check:before {
+input[type='checkbox']:checked+label>.span-check:before {
     content: "";
     position: absolute;
     top: .6em;
@@ -290,8 +298,9 @@ input[type='checkbox']:checked+label>#span-check:before {
     background-color: #52ab98;
 }
 
-#products p {
+#products div {
     color: #52ab98;
+    display: flex;
 }
 
 .empty-message {
@@ -312,9 +321,29 @@ input[type='checkbox']:checked+label>#span-check:before {
     background-clip: border-box;
 }
 
+.remove-btn {
+    background-color: crimson;
+    font-family: 'Vazir-FD';
+    outline: none;
+    border: none;
+    color: #fff;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    margin-right: 1rem;
+    width: 3rem;
+}
+
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 950px) {
+    .main {
+        width: 70%;
+    }
+
+    .container {
+        width: 70%;
+    }
+
     .search {
         display: flex;
         flex-direction: column;
@@ -329,5 +358,39 @@ input[type='checkbox']:checked+label>#span-check:before {
         width: 50%;
         height: 2rem;
         margin: auto;
+    }
+
+    .select {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .main {
+        width: 90%;
+    }
+
+    .container {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+
+    .section-product-exist {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .remove-btn {
+        width: 2rem;
+        height: 2rem;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .select {
+        width: 100%;
+        font-size: 0.5rem;
     }
 }
