--- a/styles/style.css
+++ b/styles/style.css
@@ -337,6 +337,11 @@ input[id='existProduct']:checked + label > span:before {
     align-items: center;
     flex-direction: row-reverse;
 }
+.span-product {
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem;
+}
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 950px) {
